[package]
name = "rucompart"
version = "0.1.0"
edition = "2024"

[dependencies]
fork = "0.6.0"
futures = "0.3.31"
libc = "0.2.181"
serde = { version = "1.0.228", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["serde-transport", "serde-transport-bincode", "unix"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
